# defmt-rtt-prio

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
src/: channel.rs  lib.rs
