[package]
authors = ["Albin Hedman"]
categories = ["embedded", "no-std"]
description = "Transmit defmt log messages over the RTT (Real-Time Transfer) protocol without blocking"
edition = "2021"
keywords = ["rtt", "defmt", "defmt-transport"]
license = "MIT OR Apache-2.0"
name = "defmt-rtt-prio"
readme = "README.md"
repository = "https://github.com/usbalbin/defmt-rtt-prio"
version = "0.1.0"

[features]
prio_bits_2 = []
prio_bits_3 = []
prio_bits_4 = []
prio_bits_5 = []
prio_bits_6 = []
prio_bits_7 = []
prio_bits_8 = []


[dependencies]
defmt = { version = "1" }
cortex-m = "0.7.7"
